syntax = "proto3";

import "other_protos.proto";

message SearchRequest{
	string query=1;
	int32 page_number=2;// 最终返回的页数
	int32 result_per_page=3;// 每页返回的结果数
	enum Corpus{
		UNIVERSAL=0;
		WEB=1;
		IMAGES=2;
		LOCAL=3;
		NEWS=4;
	}
	Corpus corpus=4;
}
message SearchResponse{
	repeated Result result=1;
	repeated Code code=2;
}
message Result{
	string url=1;
	string title=2;
	repeated string snippets=3;
}
